animanitons, btn styles, last two sections

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <nav class="nav-bar">
           <p>🖤 NASA: Pluto Matters!</p>
           <ul class="nav-ul">
-            <li class="cell cell-1"><a href=""></a>Products</li>
-            <li class="cell cell-2" ><a href=""></a>Pricing</li>
-            <li class="cell cell-3" ><a href=""></a>Document</li>
+            <li class="cell cell-1"><a href="">Products</a></li>
+            <li class="cell cell-2" ><a href="">Pricing</a></li>
+            <li class="cell cell-3" ><a href="">Document</a></li>
             
-            <li class="cell cell-4" ><a href=""></a>Community</li>
+            <li class="cell cell-4" ><a href="">Community</a></li>
           </ul>
         </nav>
 
@@ -43,20 +43,30 @@
               <div class="welcome-btn">
 
                 <button class="btn btn-yellow" >Sign up for free</button>
-                <button class="btn" >Learn about Pro</button>
+                <button class="btn btn-orange" >Learn about Pro</button>
               </div>    
                 
             </div>
 
       </div>
 
-      <div class="second-body">
+      <section class="second-body">
         <img src="images/npm-image.png" alt="">
+          <h1>Bring the best of open source to you, your <br> team, and your company</h1>
+          <p>
+            Relied upon by more than 11 million developers worldwide, npm is <br> committed to making JavaScript development elegant, productive, and <br> safe. The free npm Registry has become the center of JavaScript code <br> sharing, and with more than one million packages, the largest software <br> registry in the world. Our other tools and services take the Registry, and <br> the work you do around it, to the next level.
 
 
 
-      </div>
 
+          </p>
+
+      </section>
+
+        <section class="third-body" >
+              <h1>We love open source</h1>
+          <p>At npm, Inc., we're proud to dedicate teams of full-time employees to <br> operating the npm Registry, enhancing the CLI, improving JavaScript <br> security, and other projects that support and nurture a vibrant open <br> source community.</p>
+        </section>
 
     </div>
   </body>
