changed sign up and box model

--- a/SignUp.html
+++ b/SignUp.html
@@ -19,7 +19,7 @@
             <div class="sign-up-box">
                 <h1 class="NPM-heading"> Sign Up</h1>
                     <hr>
-                <label for="username"> username</label>
+                <label style=" marging:0.25rem; " for="username"> username</label>
                 <input type="text">
                 <label for="email"> Email Address</label>
                 <input type="text">
